--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "reactjs-homework",
    "version": "0.1.0",
    "private": true,
-   "homepage": "https://myusername.github.io",
+   "homepage": "https://tienluu.github.io/BC32_ReactJS/",
    "dependencies": {
       "@fortawesome/react-fontawesome": "^0.2.0",
       "@testing-library/jest-dom": "^5.16.5",
